# Test-Deeplearning

./: .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT_LOG.md  IMPLEMENTATION-SUMMARY.md  Makefile  README.md  frontend-changes.md  package.json  playwright.config.js  pyproject.toml  requirements.txt
AI-Hausverwaltung-Webseite/src/: index-complete.html
Coursera_Claude_Code_V-University/expense-tracker/app/expenses/: page.tsx
Coursera_Claude_Code_V-University/expense-tracker/components/: CloudExportButton.tsx  CloudExportHub.tsx  Dashboard.tsx
Coursera_Claude_Code_V-University/expense-tracker/lib/: cloudExport.ts  exportTemplates.ts  shareUtils.ts
Deeplearning_Coding_Code/: README.md  index.html  package-lock.json  script.js  styles.css
Deeplearning_Coding_Code/.claude/commands/: implement-feature.md
backend/: TEST_ANALYSIS_REPORT.md  ai_generator.py  ai_generator_backup.py  app.py  rag_system.py  search_tools.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_ai_generator_sequential.py  test_integration.py  test_live_system.py  test_search_tools.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: quality-check.sh
tests/: new-chat-button.spec.js  test_api_endpoints.py  test_rag_system.py  visual-regression.spec.js
